# tanzu-install-annotated

./: .readthedocs.yaml  README.rst  conf.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: KCfg  addons-controller-manager.md  cloud-int  cni.md  index.md  index.md1  notes.md  upgrade.md  z0-wl.md  z1-addons.md  z2-proxy.md  z3-webhooks.md  z4-tkr.md  z5-cc.md  z6-np.md  z9-win  z9-win.md  zz-funfacts.md  zz-h23.md  zz-notes.md  zz-tanzucli.md  zz-tkg-2.3  zz-tkg-2.3.md
docs/docs/: index.md
