[build-system]
# todo, not using pydownx or mkdocs-pydownx yet. want to add mermaid some day though.
requires = ["flit_core >=3.2,<4","pymdownx","mkdocs-pymdownx-material-extras"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
dynamic = ["version", "description"]
